@@ -4,6 +4,7 @@
        - Updated: frontend JavaScript and CSS files registered in a way respecting CCC (Combine, Compress and Cache) setting
        - Fixed: proper missing order currency rate handling
        - Removed: loading currency rate from cnb.cz
+       - Updated: to avoid certificate errors, https protocol has been replaced to http in WSDL and branch feed URLs
 2.1.16 - Fixed: Correct loading of Packeta order list in case of paging
 2.1.15 - Added: support for Packeta address validation widget in the cart with 'none', 'optional' and 'required'
          modes of operation. Validated address is saved and used in exports.
